--- a/html/datHang.html
+++ b/html/datHang.html
@@ -11,7 +11,25 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/DangKi_DangNhap.js"></script>
     <title>Đặt Hàng</title>
+    <style>
+        .modal.hide {
+            display: none;
+        }
+        
+        .error {
+            color: red;
+            font-style: italic;
+        }
+    </style>
+
+    <script>
+        function hideModal(modalId) {
+            var modal = document.getElementById(modalId);
+            modal.classList.add("d-none");
+        }
+    </script>
 </head>
 
 <body>
@@ -20,11 +38,11 @@
         <header>
             <div class="menuChinh">
                 <div class="container_item_MenuChinh">
-                    <div><a id="item_MenuChinh" href="#"><b>Trang chủ</b> </a></div>
-                    <div><a id="item_MenuChinh" href="#"><b>Giới thiệu</b> </a></div>
-                    <div><a id="item_MenuChinh" href="#"><b>Liên hệ</b></a></div>
-                    <div><a id="item_MenuChinh" href="#"><b>Đăng Kí</b></a></div>
-                    <div><a id="item_MenuChinh" href="#" data-toggle="modal" data-target="#logInModal"><b>Đăng nhập</b></a></div>
+                    <div><a class="item_MenuChinh" href="#"><b>Trang chủ</b> </a></div>
+                    <div><a class="item_MenuChinh" href="#"><b>Giới thiệu</b> </a></div>
+                    <div><a class="item_MenuChinh" href="#"><b>Liên hệ</b></a></div>
+                    <div><a class="item_MenuChinh" id="dangKi" href="#" data-toggle="modal" data-target="#SignUpModal"><b>Đăng Kí</b></a></div>
+                    <div><a class="item_MenuChinh" id="dangNhap" href="#" data-toggle="modal" data-target="#logInModal"><b>Đăng nhập</b></a></div>
                     <div class="gioHang">
                         <a id="item_MenuChinh" href="#">
                             <p>Giỏ hàng</p>
@@ -108,7 +126,7 @@
     <!-- thông tin đặt hàng -->
     <div id="back" class="col-md-4">
         <a href="../html/giaoDienChinh.html" id="#trangchu">Trang Chủ</a> /
-        <a href="#" id="linkdathang"> Đặt hàng</a>
+        <a href="../html/datHang.html" id="linkdathang"> Đặt hàng</a>
     </div>
     <div class="col-md-12" style="margin-top:-70px">
         <div class="col-md-10" style="margin:auto; margin-top:100px; display:flex; justify-content: space-between">
@@ -220,10 +238,11 @@
         </div>
         <p>Copyright 2023 © Thiết kế Website bởi: Nhóm 07</p>
         <br>
-    </b>
+            </b>
         </div>
     </footer>
-    <div class="modal fade" id="logInModal" role="dialog">
+    <!-- modal đắng nhập -->
+    <div class="modal fade mddangNhap" id="logInModal" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -232,30 +251,91 @@
                 </div>
                 <div class="modal-body">
                     <form role="form" class="form-horizontal">
-                        <div class="form-group">
-                            <div id="thongbao" class="text-danger" style="text-align: center;"></div>
+                        <div class="form-floating mb-3">
+                            <label for="inputUserName">Tên người dùng</label>
+                            <input class="form-control" id="inputUserName" type="text" placeholder="tên người dùng" />
+                            <span id="errname" class="text-erro"></span>
                         </div>
-                        <div class="form-group">
-                            <label for="txtUserName" class="control-label col-xs-3">UserName</label>
-                            <div class="col-md-9">
-                                <input type="text" class="form-control" id="txtUserName" placeholder="UserNamme">
-                                <span id="tbUserName" class="text-danger">*</span>
-                            </div>
+                        <div class="form-floating mb-3">
+                            <label for="inputPassword">Mật khẩu</label>
+                            <input class="form-control" id="inputPassword" type="password" placeholder="Mật khẩu" />
+                            <span id="errpass"></span>
                         </div>
-                        <div class="form-group">
-                            <label for="txtPass" class="control-label col-xs-3">PassWord</label>
-                            <div class="col-md-9">
-                                <input type="password" class="form-control" id="txtPass" placeholder="PassWord">
-                                <span id="tbPass" class="text-danger">*</span>
-                            </div>
+                        <div class="form-check mb-3">
+                            <input class="form-check-input" id="inputRememberPassword" type="checkbox" value="" />
+                            <label class="form-check-label" for="inputRememberPassword">Nhớ mật khẩu</label>
                         </div>
-                        <button type="submit" class="btn btn-success btn-lg btn-block" id="btnDangNhap">Đăng nhập </button>
+                        <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
+                            <a class="small" href="#">Quên nật khẩu</a>
+                            <a class="btn btn-success" id="btnLogin" href="../html/giaoDienChinh.html">Đăng nhập</a>
+                        </div>
                     </form>
-                    <div class="modal-footer"></div>
+                    <div class="modal-footer text-center py-3" style="margin-top:10px;">
+                        <div class="small"><a id="taoTK" href="" data-toggle="modal" data-target="#SignUpModal" onclick="hideModal('logInModal')">Chưa có tài khoản? Đăng kí!</a></div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- modal đăng kí -->
+    <div class="modal fade mddangKi" id="SignUpModal" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 style="text-align: center;">Đăng Kí</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-floating mb-3 mb-md-0">
+                        <label for="inputUserName">Tên người dùng</label>
+                        <input class="form-control" id="inputUsertName" type="text" placeholder="Nhập tên người dùng" />
+                        <span id="errname"></span>
+                    </div>
+
+                    <div class="form-floating mb-3">
+                        <label for="inputEmail">Email</label>
+                        <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
+                        <span id="erremail"></span>
+                    </div>
+                    <div class="form-floating mb-3 mb-md-0">
+                        <label for="inputPassword">Mật khẩu</label>
+                        <input class="form-control" id="inputPassword" type="password" placeholder="Nhập mật khẩu" />
+                        <span id="errpass"></span>
+                    </div>
+                    <div class="form-floating mb-3 mb-md-0">
+                        <label for="inputPasswordConfirm">Xác nhận mật khẩu</label>
+                        <input class="form-control" id="inputPasswordConfirm" type="password" placeholder="Nhập lại mật khẩu" />
+                        <span id="errconfirm"></span>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <label for="inputPhone">Số điện thoại</label>
+                        <input class="form-control" id="inputPhone" type="text" placeholder="0xxxxxxxxxx" />
+                        <span id="errphone"></span>
+                    </div>
+                    <div class="mt-4 mb-0">
+                        <div class="d-grid"><a class="btn btn-success btn-block" id="btnSignUp" type="submit" href="#">Tạo tài khoản</a></div>
+                    </div>
+                    </form>
+                    <div class="modal-footer text-center py-3" style="margin-top:10px;">
+                        <div class="small"><a id="daCoTK" href="#" data-toggle="modal" data-target="#logInModal" onclick="hideModal('SignUpModal')">Đã có tài khoản? Đăng nhập</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- modal thông báo đăng kí thành công -->
+    <!-- <div class="modal fade" id="thongbao">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <h4 style="text-align: center;">Đăng kí thành công!</h4>
+                    <div class="d-flex align-items-center">
+                        <a class="btn btn-success" style="margin: auto;" href="#" data-toggle="modal" data-target="#logInModal" onclick="hideModal('thongbao')">Đăng nhập</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
 </body>
 
 </html>
